# utils

./: .clang-format  .gitignore  CMakeLists.txt  DESCRIPTION.txt  LICENSE  README.md
include/: logger.hh  string.hpp
include/console/: logger.hpp
include/math/: constants.hpp
include/math/functions/: convert.hpp  square_root.hh  trigonometry.hpp
include/math/objects/: vector2d.hpp  vector3d.hh
include/recurring/console/: card.hpp  logger.hpp
include/recurring/math/: constants.hpp  trigonometry.hpp
include/recurring/math/functions/: convert.hpp  square_root.hpp  trigonometric_functions.hpp
include/recurring/math/objects/: vector2d.hpp  vector3d.hpp  vector4d.hpp  vectors.hpp
include/recurring/utils/: string.hpp
include/untitled/: string.hpp
include/untitled/console/: logger.hpp
include/untitled/math/: constants.hpp  trigonometry.hpp
include/untitled/math/functions/: convert.hpp  square_root.hpp  trigonometric_functions.hpp
include/untitled/math/objects/: vector2d.hpp  vector3d.hpp  vector4d.hpp  vectors.hpp
include/untitled/utils/: string.hpp  trigonometry.hpp  vector.hpp
include/utils/: vector.hpp
source/: functions.cc  logger.cc  objects.cc
source/console/: logger.cpp
source/math/: functions.cpp  objects.cpp
source/utils/: string.cpp
test/: CMakeLists.txt  test.cc
tests/: CMakeLists.txt  test.cc  vector.cc
